media querries added and fixed the spacing

--- a/src/css/base/_scroll.scss
+++ b/src/css/base/_scroll.scss
@@ -1,5 +1,5 @@
 section {
-    height: 100vh;
+    height: 70vh;
     width: 100vw;
 }
 
@@ -18,32 +18,47 @@ section {
 }
 
 .project-info {
-    background: #ececec;
+    background: #ffffff;
     padding: 20px;
     z-index: 22;
-
+    -webkit-box-shadow: 7px 7px 14px rgba(0, 0, 0, 0.12);
+    box-shadow: 7px 7px 14px rgba(0, 0, 0, 0.12);
 }
 
 .project-left .box {
-    grid-column: 3/span 5;
+    grid-column: 3/span 6;
     grid-row: 1/span 3;
     width: 100%;
+    @media only screen and (max-width: 420px){
+        grid-column: 1/span 12;
+    }
 }
 
 .project-left .project-info {
-    grid-column: 2/span 3;
+    grid-column: 2/span 4;
     grid-row: 2/span 1;
+    @media only screen and (max-width: 420px){
+        grid-column: 1/11;
+        grid-row: 3/span 2;
+    }
 }
 
 .project-right .box {
-    grid-column: 3/span 5;
+    grid-column: 5/span 6;
     grid-row: 1/span 3;
     width: 100%;
+    @media only screen and (max-width: 420px){
+        grid-column: 1/span 12;
+    }
 }
 
 .project-right .project-info {
-    grid-column: 2/span 2;
+    grid-column: 8/span 4;
     grid-row: 2/span 1;
+    @media only screen and (max-width: 420px){
+        grid-column: -1/3;
+        grid-row: 3/span 2; 
+    }
 }
 
 .box {
@@ -56,7 +71,7 @@ section {
     display: block;
     left: 0;
     top: 0;
-    background: #ccc;
+    background: #ffffff;
     position: absolute;
     width: 100%;
     height: 100%;
